@@ -40,17 +40,20 @@
 #include <X11/xpm.h>
 #endif
 
-#define EWINDOW 0xF3
+#define EDELIB_WINDOW 0xF3
 
-#define DEFAULT_ICON_THEME "edeneu"
+#define DEFAULT_ICON_THEME "edeneu" /* FIXME: this name should be shared somehow with IconLoader */
 #define DEFAULT_FONT_SIZE  12
+
+#define FOREIGN_CALLBACK_ATOM_NAME "_EDELIB_FOREIGN_CALLBACK"
 
 extern int FL_NORMAL_SIZE;
 
 EDELIB_NS_BEGIN
 
-static XSettingsClient* xcli = NULL;
+static Atom             foregin_cb_atom  = 0;
 static char*            seen_theme = NULL;
+static XSettingsClient* xcli = NULL;
 
 static bool icon_theme_load_once(const char* theme) {
 	if(seen_theme && strcmp(seen_theme, theme) == 0)
@@ -71,16 +74,14 @@ static void send_client_message(::Window w, Atom a, unsigned int uid) {
 	long mask;
 
 	memset(&xev, 0, sizeof(xev));
-	xev.xclient.type = ClientMessage;
+	xev.type = ClientMessage;
 	xev.xclient.window = w;
 	xev.xclient.message_type = a;
 	xev.xclient.format = 32;
 	xev.xclient.data.l[0] = uid;
 	xev.xclient.data.l[1] = CurrentTime;
-	mask = 0L;
+	mask = 0;
 
-	if(w == RootWindow(fl_display, fl_screen))
-		mask = SubstructureRedirectMask;
 	XSendEvent(fl_display, w, False, mask, &xev);
 }
 
@@ -108,9 +109,44 @@ static void set_titlebar_icon(Fl_Window* ww) {
 #endif
 }
 
+static void process_xevent_for_foreign_callback(const XEvent* xev) {
+	if(xev->type != ClientMessage)
+		return;
+	
+	Atom msg_atom = xev->xclient.message_type;
+	char* msg_name = XGetAtomName(fl_display, msg_atom);
+
+	/* check if the names matches, so we don't load machinery for all received ClientMessage messages */
+	if(!msg_name || strcmp(msg_name, FOREIGN_CALLBACK_ATOM_NAME) != 0)
+		return;
+
+	/* XGetAtomName() returns string copy */
+	XFree(msg_name);
+
+	/* 
+	 * Use FLTK's list of known windows and via FLTK RTTI (nothing better, for now) find Window objects and
+	 * instances that matches requested ID, whose callbacks will be called.
+	 *
+	 * We can't use global Window object, because callbacks will be messed up due multiple Window instances
+	 * and only last created Window object will receive them.
+	 */
+	for(Fl_Window* win = Fl::first_window(); win; win = Fl::next_window(win)) {
+		if(win->type() >= EDELIB_WINDOW) {
+			edelib::Window* ewin = (edelib::Window*)win;
+			unsigned int id = (unsigned int)xev->xclient.data.l[0];
+
+			/* ID's matches (or global, 0, ID received), call callback */
+			if((id == 0 || ewin->window_id() == id) && ewin->foreign_callback())
+				(*ewin->foreign_callback())(ewin->foreign_callback_data());
+		}
+	}
+}
+
 static int xevent_handler(int id) {
 	if(xcli)
 		xcli->process_xevent(fl_xevent);
+
+	process_xevent_for_foreign_callback(fl_xevent);
 
 	/* allow event could be processed again if user installs own handler */
 	return 0;
@@ -124,7 +160,7 @@ static void xsettings_cb(const char* name, XSettingsAction action, XSettingsSett
 		unsigned char r, g, b;
 
 		if(action == XSETTINGS_ACTION_DELETED || setting->type != XSETTINGS_TYPE_COLOR) {
-			// FL_GRAY
+			/* FL_GRAY */
 			r = g = b = 192;
 		} else {
 			r = setting->data.v_color.red;
@@ -138,7 +174,7 @@ static void xsettings_cb(const char* name, XSettingsAction action, XSettingsSett
 		unsigned char r, g, b;
 
 		if(action == XSETTINGS_ACTION_DELETED || setting->type != XSETTINGS_TYPE_COLOR) {
-			// FL_WHITE
+			/* FL_WHITE */
 			r = g = b = 255;
 		} else {
 			r = setting->data.v_color.red;
@@ -152,7 +188,7 @@ static void xsettings_cb(const char* name, XSettingsAction action, XSettingsSett
 		unsigned char r, g, b;
 
 		if(action == XSETTINGS_ACTION_DELETED || setting->type != XSETTINGS_TYPE_COLOR) {
-			// FL_BLACK
+			/* FL_BLACK */
 			r = g = b = 0;
 		} else {
 			r = setting->data.v_color.red;
@@ -169,11 +205,10 @@ static void xsettings_cb(const char* name, XSettingsAction action, XSettingsSett
 		else
 			normal_size = setting->data.v_int;
 		/*
-		 * A temporal hack until I figure something better.
+		 * XXX: A temporal hack until I figure something better.
 		 *
-		 * Ideal way would be to use got font size and call labelsize() 
-		 * on each child inside window, but some of those childs can be 
-		 * Fl_Group which does not labelsize()
+		 * Ideal way would be to use got font size and call labelsize() on each child inside 
+		 * window, but some of those childs can be Fl_Group which does not labelsize()
 		 */
 		FL_NORMAL_SIZE = normal_size;
 		changed = true;
@@ -196,22 +231,24 @@ static void xsettings_cb(const char* name, XSettingsAction action, XSettingsSett
 }
 
 Window::Window(int X, int Y, int W, int H, const char* l, int component) : Fl_Double_Window(X, Y, W, H, l), 
-	inited(false), sbuffer(false), loaded_components(0), 
+	sbuffer(false), loaded_components(0), 
 	xs(NULL),
 	xs_cb(NULL), xs_cb_old(NULL), xs_cb_data(NULL),
-	icon_pixmap(NULL) 
+	icon_pixmap(NULL),
+	wid(0)
 {
-	type(EWINDOW);
+	type(EDELIB_WINDOW);
 	init(component);
 }
 
 Window::Window(int W, int H, const char* l, int component) : Fl_Double_Window(W, H, l),
-	inited(false), sbuffer(false), loaded_components(0), 
+	sbuffer(false), loaded_components(0), 
 	xs(NULL),
 	xs_cb(NULL), xs_cb_old(NULL), xs_cb_data(NULL), 
-	icon_pixmap(NULL) 
+	icon_pixmap(NULL),
+	wid(0)
 {
-	type(EWINDOW);
+	type(EDELIB_WINDOW);
 	init(component);
 }
 
@@ -226,9 +263,6 @@ Window::~Window() {
 }
 
 void Window::init(int component) {
-	if(inited)
-		return;
-
 	if(component & WIN_INIT_IMAGES)
 		fl_register_images();
 
@@ -244,15 +278,22 @@ void Window::init(int component) {
 								 MSGBOX_ICON_QUESTION, 
 								 MSGBOX_ICON_PASSWORD);
 
-	/* pref_atom = XInternAtom(fl_display, "_CHANGE_SETTINGS", False); */
+	/* foreign callback atom */
+	if(!foregin_cb_atom)
+		foregin_cb_atom = XInternAtom(fl_display, FOREIGN_CALLBACK_ATOM_NAME, False);
 
+	/* XSETTINGS stuff */
 	xs = new XSettingsClient();
-	if(xs->init(fl_display, fl_screen, xsettings_cb, this))
-		xcli = xs;
-	else {
+	if(!xs->init(fl_display, fl_screen, xsettings_cb, this)) {
 		delete xs;
 		xs = NULL;
 	}
+
+	/* 
+	 * add_handler() does not have parameter for optional data, so global storage must be used 
+	 * XXX: does it collide with other Window objects?
+	 */
+	xcli = xs;
 
 	/*
 	 * FLTK keeps internaly list of event handlers that are shared between
@@ -265,8 +306,6 @@ void Window::init(int component) {
 	 */
 	Fl::remove_handler(xevent_handler);
 	Fl::add_handler(xevent_handler);
-
-	inited = true;
 }
 
 void Window::show(void) {
@@ -293,6 +332,32 @@ void Window::show(void) {
 	} else {
 		XMapRaised(fl_display, fl_xid(this));
 	}
+}
+
+/* static */
+void Window::do_foreign_callback(unsigned int id) {
+	E_RETURN_IF_FAIL(fl_display != NULL);
+
+	if(!foregin_cb_atom)
+		foregin_cb_atom = XInternAtom(fl_display, FOREIGN_CALLBACK_ATOM_NAME, False);
+
+	/* XXX: not good; some better solution to get running windows should be find */
+
+	::Window dummy, root, *children = 0;
+	unsigned int nchildren;
+
+	root = RootWindow(fl_display, fl_screen);
+	XQueryTree(fl_display, root, &dummy, &dummy, &children, &nchildren);
+	if(!nchildren)
+		return;
+
+	for(unsigned int i = 0; i < nchildren; i++) {
+		if(children[i] != root)
+			send_client_message(children[i], foregin_cb_atom, id);
+	}
+
+	XFree(children);
+	XSync(fl_display, False);
 }
 
 EDELIB_NS_END
